--- a/views/MercadoLiebre.html
+++ b/views/MercadoLiebre.html
@@ -16,47 +16,36 @@
     
     <header>
         <section id="configHeader">
-
-            <nav>
-                <ul class="Confignav">
-                    <li><a href="#">Ofertas</a></li>
-                    <li><a href="#">Tiendas Oficiales</a></li>
-                    <li><a href="#">Vender</a></li>
-                    <li><a href="#">Ayuda</a></li>
-                    <li><a href="register">Creá tu cuenta</a></li>
-                    <li><a href="login">Ingresá</a></li>
-                    <li><a href="#">Mis compras</a></li>
-                </ul>
-            </nav>
-            
-
-
-
             <figure id="logo">
                 <a href="/">
                     <img src="/images/media-markt-logo.svg" alt="LogoMercadoLiebre">
                 </a>
             </figure>
 
-            <div class="burger-menu">
-                <i class="fas fa-bars"></i>
-            </div>
-
             <section class="contenedor__buscador">
                 <form action="/buscar" method="POST">
-                        <input type="text" placeholder="Buscá productos, marcas y más" required="">
+                        <input type="text" placeholder="Buscar" required="">
                     <div class="configLupa">
                         <button type="submit"><i class="fas fa-search"></i></button>
                     </div>
                 </form>
             </section>
             
-            <section class="cuotas">
-                <p>Mi tienda</p>
-            </section>
-            
 
-
+            <nav>
+                <ul class="Confignav">
+                    <li><a href="#">Ofertas</a></li>
+                    <li><a href="#">Tiendas Oficiales</a></li>
+                    <li><a href="#">Formaciones</a></li>
+                    <li><a href="#">Ayuda</a></li>
+                </ul>
+                <ul class="Confignav">
+                    <li><a href="#">Personaliza tu regalo</a></li>
+                    <li><a href="register">Creá tu cuenta</a></li>
+                    <li><a href="login">Ingresá</a></li>
+                    <li><a href="#">Mis compras</a></li>
+                </ul>
+            </nav>
 
 
             <figure id="BannerOfertas">
@@ -69,7 +58,7 @@
         <section class="configMain">
             <section class="settingBasado">
 
-                <h1>Basado en tu última visita</h1>
+                <h1>Electrodomesticos</h1>
 
                 <article class="cajaArticulos">
                     <img src="/images/Cafetera.jpg" alt="">
@@ -104,7 +93,7 @@
                             <p class="descuentos">10% off</p>
                         </div>
                     </section>
-                    <h2>Samsung Galaxy S10</h2>
+                    <h2><a href="celular.html">Samsung Galaxy S10</a></h2>
                 </article>
 
                 <article class="cajaArticulos">
