--- a/views/register.html
+++ b/views/register.html
@@ -19,41 +19,35 @@
         <section id="configHeader">
             <figure id="logo">
                 <a href="/">
-                    <img src="/images/LogoMercadoLiebre.svg" alt="LogoMercadoLiebre">
+                    <img src="/images/media-markt-logo.svg" alt="LogoMercadoLiebre">
                 </a>
             </figure>
 
             <section class="contenedor__buscador">
                 <form action="/buscar" method="POST">
-                        <input type="text" placeholder="Buscá productos, marcas y más" required="">
+                        <input type="text" placeholder="Buscar" required="">
                     <div class="configLupa">
                         <button type="submit"><i class="fas fa-search"></i></button>
                     </div>
                 </form>
             </section>
             
-            <section class="cuotas">
-                <div><i class="fas fa-hand-holding-usd"></i></div>
-                <p>Comprá en cuotas y sin tarjeta de crédito</p>
-            </section>
-            
+
             <nav>
                 <ul class="Confignav">
                     <li><a href="#">Ofertas</a></li>
                     <li><a href="#">Tiendas Oficiales</a></li>
-                    <li><a href="#">Vender</a></li>
+                    <li><a href="#">Formaciones</a></li>
                     <li><a href="#">Ayuda</a></li>
                 </ul>
                 <ul class="Confignav">
-                    <li><a href="register">Creá tu cuenta<i class="far fa-id-card"></i></a></li>
-                    <li><a href="login">Ingresá<i class="fas fa-sign-in-alt"></i></a></li>
-                    <li><a href="#">Mis compras<i class="fas fa-shopping-basket"></i></a></li>
+                    <li><a href="#">Personaliza tu regalo</a></li>
+                    <li><a href="register">Creá tu cuenta</a></li>
+                    <li><a href="login">Ingresá</a></li>
+                    <li><a href="#">Mis compras</a></li>
                 </ul>
             </nav>
 
-            <div class="burger-menu">
-                <i class="fas fa-bars"></i>
-            </div>
 
             <figure id="BannerOfertas">
                 <img src="/images/Ofertas.jpg" alt="BannerOfertas">
