--- a/views/celular.html
+++ b/views/celular.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,7 @@
     <script src="https://kit.fontawesome.com/1a954e04d1.js" crossorigin="anonymous"></script>
     <title>login</title>
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/celular.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     rel="stylesheet" />
 </head>
@@ -45,6 +44,7 @@
                     <li><a href="register">Creá tu cuenta</a></li>
                     <li><a href="login">Ingresá</a></li>
                     <li><a href="#">Mis compras</a></li>
+                    <li><a href="papanoel">Papa Noel</a></li>
                 </ul>
             </nav>
 
@@ -53,21 +53,10 @@
                 <img src="/images/Ofertas.jpg" alt="BannerOfertas">
             </figure>
     </header>
-    
+
     <main>
-        <div class="main">
-            <form action="/" method="POST" class="login">
-                <div class="campo">
-                    <input type="text" placeholder="Nombre de usuario" required>
-                </div>
-                <div class="campo">
-                    <input type="password" placeholder="Contraseña" required>
-                </div>
-                <div class="campo, boton">
-                    <button type="submit">Entrar</button>
-                </div>
-            </form>
-        </div>
+
+        
     </main>
 
     <footer>
