--- a/views/celular.html
+++ b/views/celular.html
@@ -55,7 +55,10 @@
     </header>
 
     <main>
-
+        <figure id="BannerOfertas">
+            <img src="/images/inocente.png" alt="">
+            <img src="/images/navidad.png" alt="BannerOfertas">
+        </figure>
         
     </main>
 
