--- a/views/MercadoLiebre.html
+++ b/views/MercadoLiebre.html
@@ -146,7 +146,7 @@
                             <p class="descuentos">10% off</p>
                         </div>
                     </section>
-                    <h2>Samsung Galaxy S10</h2>
+                    <h2><a href="/celular">Samsung Galaxy S10</a></h2>
                 </article>
 
                 <article class="cajaArticulos">
