--- a/views/MercadoLiebre.html
+++ b/views/MercadoLiebre.html
@@ -65,7 +65,7 @@
                     <section class="descripcion">
                         <i class="fas fa-truck"></i>
                         <div class="preciosDescuentos">
-                            <p class="precios">$6.770</p>
+                            <p class="precios">36,07€</p>
                             <p class="descuentos">40% off</p>
                         </div>
                     </section>
@@ -77,7 +77,7 @@
                     <section class="descripcion">
                         <i class="fas fa-truck"></i>
                         <div class="preciosDescuentos">
-                            <p class="precios">$230.000</p>
+                            <p class="precios">1225,47€</p>
                             <p class="descuentos">20% off</p>
                         </div>
                     </section>
@@ -89,7 +89,7 @@
                     <section class="descripcion">
                         <i class="fas fa-truck"></i>
                         <div class="preciosDescuentos">
-                            <p class="precios">$70.500</p>
+                            <p class="precios">375,63€</p>
                             <p class="descuentos">10% off</p>
                         </div>
                     </section>
@@ -101,7 +101,7 @@
                     <section class="descripcion">
                         <i class="fas fa-truck"></i>
                         <div class="preciosDescuentos">
-                            <p class="precios">$23.200</p>
+                            <p class="precios">123,61€</p>
                             <p class="descuentos">5% off</p>
                         </div>
                     </section>
@@ -118,7 +118,7 @@
                     <section class="descripcion">
                         <i class="fas fa-truck"></i>
                         <div class="preciosDescuentos">
-                            <p class="precios">$6.770</p>
+                            <p class="precios">36,07€</p>
                             <p class="descuentos">40% off</p>
                         </div>
                     </section>
@@ -130,7 +130,7 @@
                     <section class="descripcion">
                         <i class="fas fa-truck"></i>
                         <div class="preciosDescuentos">
-                            <p class="precios">$230.000</p>
+                            <p class="precios">1225,47€</p>
                             <p class="descuentos">20% off</p>
                         </div>
                     </section>
@@ -142,7 +142,7 @@
                     <section class="descripcion">
                         <i class="fas fa-truck"></i>
                         <div class="preciosDescuentos">
-                            <p class="precios">$70.500</p>
+                            <p class="precios">375,63€</p>
                             <p class="descuentos">10% off</p>
                         </div>
                     </section>
@@ -154,12 +154,13 @@
                     <section class="descripcion">
                         <i class="fas fa-truck"></i>
                         <div class="preciosDescuentos">
-                            <p class="precios">$23.200</p>
+                            <p class="precios">123,61€</p>
                             <p class="descuentos">5% off</p>
                         </div>
                     </section>
                     <h2>SmartTv Samsung 43<h2>
                 </article>
+            </section>
                 
             </section>
         </section>
