--- a/views/celular.html
+++ b/views/celular.html
@@ -55,8 +55,8 @@
 
     <main>
         <figure id="BannerOfertas">
-            <img src="/images/inocente.png" alt="">
-            <img src="/images/navidad.png" alt="BannerOfertas">
+            <img src="/images/inocente.png" alt="Alma">
+            <img src="/images/navidad.png" alt="Ohh!!! Que paso? Este pedido no me llegó!!!">
         </figure>
         
     </main>
