--- a/views/register.html
+++ b/views/register.html
@@ -157,7 +157,7 @@
                 <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
             </section>
         </div>
-        <p id="copyright">Copyright 1999-2020 MercadoLiebre S.R.L.</p>
+        <p id="copyright">Copyright 1999-2020 MediaM4rkt S.R.L.</p>
     </footer>
 </body>
 
